# Rewis3d

./: .gitignore  LICENSE  Readme.md  index.html
Rewis3d_Model/: README.md  environment.yml  install_ops.sh  verify_eomt_loading.py
Rewis3d_Model/configs/_base_/: default_runtime.py
Rewis3d_Model/configs/cityscapes/: ptv3_concerto_map_anything.py  ptv3_map_anything.py
Rewis3d_Model/configs/kitti360/: ptv3_map_anything.py  ptv3_map_anything_sky_optimized.py
Rewis3d_Model/configs/nyuv2/: ptv3_map_anything.py
Rewis3d_Model/configs/waymo/: ptv3_map_anything.py
Rewis3d_Model/libs/pointgroup_ops/: setup.py
Rewis3d_Model/libs/pointops/: __init__.py  setup.py
Rewis3d_Model/libs/pointops2/: setup.py
Rewis3d_Model/libs/pointseg/: __init__.py  setup.py
Rewis3d_Model/pointcept/datasets/: __init__.py  builder.py  dataloader.py  datasets.py  transform_2d.py  transform_3d.py  utils.py
Rewis3d_Model/pointcept/engines/: __init__.py  defaults.py  launch.py  train.py
Rewis3d_Model/pointcept/models/: __init__.py  builder.py  (+4 more)
Rewis3d_Model/tools/: train.py
Rewis3d_Reconstruction/: Readme.md  pyproject.toml
Rewis3d_Reconstruction/reconstruction/: __init__.py  add_data_to_npz.py  compute_pointclip_from_npz.py  create_reconstructions.py  example_uniform_with_labels.py  generate_dataset.py  image_loading.py  label_utils.py  point_sampling.py  pointcloud_processing.py  save_dataset.py  show_npz_data.py  visualize_all_data.py  visualize_npz_file.py
Rewis3d_Reconstruction/reconstruction/config/: KITTI360_Supplementary.yaml  cityscapes_single_image_coarse.yaml  cityscapes_single_image_points.yaml  cityscapes_single_image_sam.yaml  cityscapes_single_image_scribbles.yaml  kitti360.yaml  kitti360_depth_anything.yaml  kitti360_single_image.yaml  nyuv2.yaml  nyuv2_sam.yaml  test.yaml  waymo.yaml  waymo_fig4.yaml  waymo_single_image.yaml  waymo_supplementary.yaml
Rewis3d_Reconstruction/reconstruction/methods/: README.md  __init__.py  base.py  registry.py
Rewis3d_Reconstruction/reconstruction/methods/depth_anything_v3/: __init__.py  method.py
Rewis3d_Reconstruction/reconstruction/methods/map_anything/: __init__.py  method.py
Rewis3d_Reconstruction/visualizations/: visualize_reconstructed_2d_data.py  visualize_reconstructed_3d_data.py
css/: styles.css
figures/: index.html
(+64 files in other folders)
