[project]
name = "Rewis3d_Reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "huggingface_hub",
    "hydra-core",
    "natsort",
    "orjson",
    "pillow-heif",
    "plyfile",
    "python-box",
    "safetensors",
    "tensorboard",
    "tqdm",
    "torchaudio", ## Temp for AWS
    "trimesh",
    "uniception>=0.1.6",
    "open3d>=0.19.0",
    "gradio>=5.47.0",
    "spaces>=0.41.1",
    "opencv-python>=4.12.0.88",
    "moviepy<2.0",
    "pycolmap>=3.13.0",
    "evo>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
